fix(site): modal artist name text overflow

--- a/shared/src/less/modal.less
+++ b/shared/src/less/modal.less
@@ -313,6 +313,7 @@ div.dtr-modal div.dtr-modal-content {
 		.content-wrap {
 			flex: 1 1 auto;
 			margin-left: 0;
+			min-width: 0;
 
 			@media screen and (min-width: 640px) {
 				margin-left: 20px;
